--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ PySide6
 kokoro
 torch --index-url https://download.pytorch.org/whl/cu121
 torchaudio --index-url https://download.pytorch.org/whl/cu121
+requests
+Pillow
+beautifulsoup4
